# openalex-pipeline

./: .env_sample  .gitignore  README.md  api_client.py  config.py  config_optimized.py  data_exporter.py  data_exporter_streaming.py  data_query.py  example_queries.py  main.py  models.py  parallel_pipeline.py  pdf_processor.py  pipeline.py  pyproject.toml  requirements-optimized.txt  requirements.txt  setup.sh
data_query_lib/: README.md  cli.py  dataset_query.py  run_manager.py  statistics.py  utils.py
docs/: DOCUMENTATION.md
src/: authors_with_pubs_found.csv  check_profiles.py  count_authors.py  not_found.csv  openalex_pipeline.py  profiles_without_publications.csv  pubmed-author-search.py  pubmed_author_search.py
src/data_query_lib/: README.md  file_io.py  file_io_module.py
src/main/: api_client.py  config.py  content_validator.py  data_exporter_streaming.py
